# gladiapy

./: .gitignore  API.md  LICENSE  README.md  pyproject.toml
examples/: chapterization_example.py  custom_vocabulary_example.py  named_entity_recognition_example.py  rest_example.py  sentiment_analysis_example.py  speaker_diarization_example.py  subtitles_example.py  summarization_example.py  translation_example.py  websocket_sentiment_example.py  websocket_translation_example.py  ws_example.py
rich-example/: README.md  app.py  requirements.txt
src/gladiapp/: __init__.py
src/gladiapp/v2/: __init__.py  errors.py  rest.py  rest_models.py  ws.py
src/gladiapy/: __init__.py
src/gladiapy/v2/: __init__.py  constants.py  errors.py  rest.py  rest_models.py  ws.py  ws_models.py
